<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">异常</string>
    <string name="across_floor_navigation">跨楼层导航</string>
    <string name="add">+</string>
    <string name="add_mark_cur_location">当前位置：</string>
    <string name="add_mark_location_name">地点名称：</string>
    <string name="add_mark_location_name_hint">请输入地点名称</string>
    <string name="add_mark_location_type">地点类型：</string>
    <string name="add_mark_title">添加标记地点</string>
    <string name="add_point">新增点位</string>
    <string name="add_point_arbitrary">新增任意点位</string>
    <string name="add_point_current">新增当前点位</string>
    <string name="addtion_info">附加信息</string>
    <string name="algorithm_version">算法版本</string>
    <string name="app_id">APPID:</string>
    <string name="app_name">部署工具</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_unit">%.2f㎡</string>
    <string name="balance">平衡</string>
    <string name="base_activity_empty">Activity(empty)</string>
    <string name="base_activity_placeholder">Activity(placeholder)</string>
    <string name="base_activity_with_convertor">Activity with Convertor</string>
    <string name="base_animat_callback">Animat Callback</string>
    <string name="base_best_practices">best practices</string>
    <string name="base_click_me_to_retry">click me to retry!</string>
    <string name="base_default_loadsir_callback">default LoadSir Callback</string>
    <string name="base_empty_tips_btn">重试</string>
    <string name="base_empty_tips_netword">请检查你的网络连接</string>
    <string name="base_empty_tips_null">暂无数据</string>
    <string name="base_filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="base_fine_no_data">fine, no data.</string>
    <string name="base_keep_title_bar">keep title bar</string>
    <string name="base_keep_title_bar_in_activity">keep title bar in Activity</string>
    <string name="base_keep_title_bar_in_fragment">keep title bar in Fragment</string>
    <string name="base_loadsir">LoadSir</string>
    <string name="base_multiple_fragment">multiple Fragment</string>
    <string name="base_multiple_fragment_viewpager">multiple Fragment+ViewPager</string>
    <string name="base_name">library-base</string>
    <string name="base_no_more_data">没有更多了</string>
    <string name="base_single_fragment_custom">single Fragment(custom)</string>
    <string name="base_success">Success</string>
    <string name="base_view_timeout">View(timeout)</string>
    <string name="bottom_nav_tips_call_elevator">正在呼梯</string>
    <string name="bottom_nav_tips_leaving_elevator">正在出梯</string>
    <string name="bottom_nav_tips_nav_waiting">导航等待中</string>
    <string name="bottom_nav_tips_taking_elevator">正在乘梯</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_map_dialog_data_forat_error">地图楼层格式错误，请输入正负整数</string>
    <string name="build_map_external_auxiliary_mode">外部辅助</string>
    <string name="build_map_floor">地图楼层：</string>
    <string name="build_map_floor_hint">请输入地图楼层</string>
    <string name="build_map_large_scene_mode">大场景模式</string>
    <string name="build_map_name">地图名称：</string>
    <string name="build_map_name_hint">请输入地图名称，15字以内</string>
    <string name="build_map_similar_pattern">相似模式</string>
    <string name="build_map_standard_mode">标准模式</string>
    <string name="build_map_title">新增地图</string>
    <string name="build_point_name_hint">请输入点位名称，15字以内</string>
    <string name="calibration">校准</string>
    <string name="cancel_edit">取消编辑</string>
    <string name="cancel_nav">取消导航</string>
    <string name="cancel_scan_map">取消新建</string>
    <string name="cancel_trajectory_drawing">取消绘制</string>
    <string name="centre">中</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chassis_config">底盘配置</string>
    <string name="chassis_connection">底盘连接</string>
    <string name="chassis_connection_confirm">确定退出底盘连接?</string>
    <string name="chassis_drive_firmware_version">底盘驱动固件版本</string>
    <string name="chassis_hardware_update">底盘驱动固件更新</string>
    <string name="chassis_hardware_update_confirm">确定底盘驱动固件更新？</string>
    <string name="chassis_hardware_version">底盘硬件版本</string>
    <string name="chassis_type">底盘类型</string>
    <string name="check_update">检查更新</string>
    <string name="clear_all_points">清\10除\10全\10部\10点\10位</string>
    <string name="clear_log">日志清除</string>
    <string name="clear_log_fail">日志清除失败</string>
    <string name="clear_log_success">日志清除成功</string>
    <string name="click_to_change">修改成功，重启后生效</string>
    <string name="close">关</string>
    <string name="company_name">深圳中智科创机器人有限公司</string>
    <string name="complete_calibration">完成校准</string>
    <string name="complex_scene_location_mode">复杂场景定位</string>
    <string name="confirm_cross_floor_nav_to_point">确认导航去\"%s\"楼\"%s\"点?</string>
    <string name="confirm_delete_map">确认删除\"%s%s\"?</string>
    <string name="confirm_delete_point">确认删除\"%s\"?</string>
    <string name="confirm_point_navigation">确认导航到\"%s\"?</string>
    <string name="confirm_update_version">确定更新%s版本</string>
    <string name="confirm_update_version_repeat">已经是最新版本，是否再次更新%s版本？</string>
    <string name="connect_chassis_confirm">连接底盘</string>
    <string name="connect_chassis_timeout">连接底盘超时，请重新登录</string>
    <string name="cordon_identify">警戒线识别</string>
    <string name="coverage_area">区域</string>
    <string name="coverage_bjd">标记点位</string>
    <string name="coverage_label">标签点位</string>
    <string name="coverage_laser">动态点云</string>
    <string name="coverage_location">所在位置</string>
    <string name="coverage_path">行进路径</string>
    <string name="cur_time">当前工控机时间</string>
    <string name="cur_version">当前版本</string>
    <string name="danger_zone">危险区</string>
    <string name="deceleration_zone_speed">减速区速度：</string>
    <string name="define_roundedimageview" />
    <string name="delete_map">删除地图</string>
    <string name="delete_point">删除点位</string>
    <string name="diagnose">故障诊断</string>
    <string name="diagnosis_buttery">电池</string>
    <string name="diagnosis_chassis_abnormal">异常</string>
    <string name="diagnosis_chassis_fail_connect">底盘连接失败</string>
    <string name="diagnosis_chassis_map_normal">地图正常</string>
    <string name="diagnosis_chassis_name">底盘模块</string>
    <string name="diagnosis_chassis_normal">正常</string>
    <string name="diagnosis_chassis_success_connected">底盘连接成功</string>
    <string name="diagnosis_connect_chassis">连接底盘</string>
    <string name="diagnosis_deep_camera">深度相机</string>
    <string name="diagnosis_error_camera_init_fail">人脸摄像头初始化失败</string>
    <string name="diagnosis_error_camera_not_found">找不到人脸摄像头</string>
    <string name="diagnosis_error_face_init">人脸SDK初始化失败</string>
    <string name="diagnosis_error_get_video_code">获取激活码失败</string>
    <string name="diagnosis_error_get_video_code_timeout">获取激活码超时</string>
    <string name="diagnosis_error_light_module_did_not_read_data">已经初始化，尚未接收到数据</string>
    <string name="diagnosis_error_light_module_fail_connect">灯光模块连接失败</string>
    <string name="diagnosis_error_open_record">开启录音失败</string>
    <string name="diagnosis_error_request_semantic_api">请求语义服务器返回失败</string>
    <string name="diagnosis_error_semantic_register">注册到语义平台失败</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="elevator_in">乘梯点</string>
    <string name="elevator_out">呼梯点</string>
    <string name="open">开</string>
    <string name="point_charge">充电桩</string>
    <string name="point_common">普通点</string>
    <string name="point_door_guard">门禁</string>
    <string name="point_gate_machine">闸机</string>
    <string name="point_stop">停靠点</string>
    <string name="point_wait">等待点</string>
    <string name="set_ultrasonic">超声波配置</string>
    <string name="t_colon">T:</string>
    <string name="text_long_press_and_rotate_to_change_orientation">长按旋转点位方向</string>
    <string name="text_point_outward_of_charging_pile">出桩点</string>
    <string name="text_start_collecting">开始采集</string>
    <string name="text_stop_collecting">停止绘制</string>
    <string name="txt_arabic">عربى</string>
    <string name="txt_english">English</string>
    <string name="txt_gateway">前置网关</string>
    <string name="txt_german">Deutsch</string>
    <string name="txt_hebrew">עִברִית</string>
    <string name="txt_immediately_switch">立即切换</string>
    <string name="txt_indonesian">Indonesia</string>
    <string name="txt_japanese">日本語</string>
    <string name="txt_korean">한국인</string>
    <string name="txt_language_change">语言切换</string>
    <string name="txt_line_collect_mode">采集模式</string>
    <string name="txt_match_degree_collect">匹配度数据收集</string>
    <string name="txt_simplified_chinese">中文（简体）</string>
    <string name="txt_thai">ญี่ปุ่น</string>
    <string name="txt_traditional_chinese">中文（繁體）</string>
    <string name="txt_turkish">Türkçe</string>
    <string name="x_colon">X:</string>
    <string name="y_colon">Y:</string>
</resources>