<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/fragment_set_language_0" android:background="@drawable/shape_rectangle_white_set_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/pt88" android:layoutDirection="locale" app:layout_constraintTop_toTopOf="0">
    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_switch_language" android:layout_marginTop="@dimen/pt32" android:text="@string/txt_language_change" android:layout_marginStart="@dimen/pt70" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/set_text_black"/>
    <HorizontalScrollView android:id="@+id/fl_switch_language" android:scrollbars="none" android:layout_width="0pt" android:layout_height="wrap_content" android:layout_marginStart="@dimen/pt45" android:layout_marginEnd="@dimen/pt45" app:layout_constraintBottom_toBottomOf="@+id/tv_switch_language" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/tv_switch_language" app:layout_constraintTop_toTopOf="@+id/tv_switch_language">
        <RadioGroup android:orientation="horizontal" android:id="@+id/rg_language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
            <RadioButton android:id="@+id/rb_simplified_chinese" android:checked="true" android:text="@string/txt_simplified_chinese" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_traditional_chinese" android:visibility="visible" android:text="@string/txt_traditional_chinese" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_english" android:text="@string/txt_english" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_german" android:visibility="visible" android:text="@string/txt_german" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_japanese" android:visibility="visible" android:text="@string/txt_japanese" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_korean" android:visibility="visible" android:text="@string/txt_korean" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_thai" android:visibility="visible" android:text="@string/txt_thai" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_arabic" android:visibility="visible" android:text="@string/txt_arabic" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_indonesian" android:visibility="visible" android:text="@string/txt_indonesian" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_hebrew" android:visibility="visible" android:text="@string/txt_hebrew" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
            <RadioButton android:id="@+id/rb_turkish" android:visibility="visible" android:text="@string/txt_turkish" android:layout_marginStart="@dimen/size_20" style="@style/set_rBtn"/>
        </RadioGroup>
    </HorizontalScrollView>
    <View android:id="@+id/line1" android:background="@color/clr_EDEDED" android:layout_width="match_parent" android:layout_height="@dimen/pt1" android:layout_marginTop="@dimen/pt32" android:layout_marginStart="@dimen/pt70" android:layout_marginEnd="@dimen/pt70" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/fl_switch_language"/>
    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/label_gateway" android:layout_marginTop="@dimen/pt35" android:layout_marginBottom="@dimen/pt31" android:text="@string/txt_gateway" android:layout_marginStart="@dimen/pt70" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/line1" style="@style/set_text_black"/>
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/selector_txt_common" android:id="@+id/btn_sure_switch" android:text="@string/txt_immediately_switch" app:layout_constraintBottom_toBottomOf="@+id/label_gateway" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/label_gateway" style="@style/setting_btn_style"/>
    <mc.csst.com.selfchassis.ui.widget.GatewayPopupWindow android:id="@+id/gpw_download" android:layout_width="0pt" android:layout_height="wrap_content" android:layout_marginStart="@dimen/pt80" android:layout_marginEnd="@dimen/pt80" app:layout_constraintBottom_toBottomOf="@+id/label_gateway" app:layout_constraintEnd_toStartOf="@+id/btn_sure_switch" app:layout_constraintStart_toEndOf="@+id/label_gateway" app:layout_constraintTop_toTopOf="@+id/label_gateway"/>
</androidx.constraintlayout.widget.ConstraintLayout>
