<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root_rl" android:tag="layout/dialog_add_mark_right_0" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/shape_rectangle_white_dialog_10" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="@dimen/size_410" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/pt35" android:layout_alignParentEnd="true">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/pt28" android:textStyle="bold" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_24" android:text="@string/add_point_arbitrary" android:layout_marginStart="@dimen/pt54"/>
        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/location_name_tv" android:layout_marginTop="@dimen/size_34" android:text="@string/add_mark_location_name" android:layout_marginStart="@dimen/pt50" style="@style/DialogContentTextView"/>
        <androidx.appcompat.widget.AppCompatEditText android:gravity="center_vertical" android:id="@+id/location_name_et" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_20" android:hint="@string/add_mark_location_name_hint" android:lines="1" android:layout_marginStart="@dimen/size_50" android:layout_marginEnd="@dimen/size_50" style="@style/DialogContentEditText1"/>
        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/location_type_tv" android:layout_marginTop="@dimen/size_32" android:text="@string/add_mark_location_type" android:layout_marginStart="@dimen/size_50" style="@style/DialogContentTextView"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_20">
            <mc.csst.com.selfchassis.utils.view.FlowRadioGroup android:orientation="vertical" android:id="@+id/flowRG1" android:layout_width="@dimen/size_160" android:layout_height="wrap_content" android:layout_marginStart="@dimen/size_50" android:layout_alignParentStart="true">
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_normal_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:checked="true" android:text="@string/point_common" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_charge_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/point_charge" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_gate_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/point_gate_machine" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_access_control_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/point_door_guard" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_in_the_lift_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/elevator_in" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
            </mc.csst.com.selfchassis.utils.view.FlowRadioGroup>
            <mc.csst.com.selfchassis.utils.view.FlowRadioGroup android:orientation="vertical" android:id="@+id/flowRG2" android:layout_width="@dimen/size_160" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/size_10" android:layout_alignParentEnd="true">
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_outside_the_lift_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/elevator_out" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_stop_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/point_stop" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_type_wait_rb" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/point_wait" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
                <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/point_outward_of_charging_pile" android:layout_marginTop="@dimen/size_10" android:layout_marginBottom="@dimen/size_10" android:text="@string/text_point_outward_of_charging_pile" android:layout_marginEnd="@dimen/pt28" style="@style/DialogContentRadioButton"/>
            </mc.csst.com.selfchassis.utils.view.FlowRadioGroup>
        </RelativeLayout>
        <androidx.appcompat.widget.LinearLayoutCompat android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_32" android:layout_marginStart="@dimen/size_50">
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/location_tv" android:text="@string/add_mark_cur_location" style="@style/DialogContentTextView"/>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/x_tv" android:text="@string/x_colon" android:layout_marginStart="@dimen/size_14" style="@style/DialogContentPointPosition"/>
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/x_et" style="@style/DialogContentPointPosition"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/y_tv" android:text="@string/y_colon" android:layout_marginStart="@dimen/size_14" style="@style/DialogContentPointPosition"/>
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/y_et" style="@style/DialogContentPointPosition"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/t_tv" android:text="@string/t_colon" android:layout_marginStart="@dimen/size_14" style="@style/DialogContentPointPosition"/>
                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/t_et" style="@style/DialogContentPointPosition"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <mc.csst.com.selfchassis.ui.widget.disc.PointRotateView android:layout_gravity="center_horizontal" android:id="@+id/point_rotate_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pt37"/>
        <TextView android:textSize="@dimen/pt18" android:textColor="@color/color_2B2B2B80" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_long_press_and_rotate_to_change_orientation" android:paddingStart="15dp" android:paddingEnd="15dp"/>
        <RelativeLayout android:orientation="horizontal" android:id="@+id/box_button" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pt28" android:layout_marginBottom="@dimen/pt24">
            <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/text_size_24_sp" android:textColor="@color/clr_196DFD" android:gravity="center" android:id="@+id/btn_selectNegative" android:background="@drawable/button_select_2" android:layout_width="@dimen/size_140" android:layout_height="@dimen/size_48" android:text="@string/dialog_cancle" android:textAllCaps="false" android:layout_marginStart="@dimen/size_50" android:layout_alignParentStart="true"/>
            <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/text_size_24_sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btn_selectPositive" android:background="@drawable/button_select" android:layout_width="@dimen/size_140" android:layout_height="@dimen/size_48" android:text="@string/dialog_confirm" android:textAllCaps="false" android:layout_marginEnd="@dimen/size_50" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
