<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:id="@+id/root_rl" android:tag="layout/dialog_build_map_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:background="@drawable/shape_rectangle_white_dialog_10" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="@dimen/size_1021" android:layout_height="@dimen/size_541">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/title_cl" android:layout_marginTop="@dimen/size_39" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/DialogTitle">
            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/dialog_title" android:text="@string/build_map_title" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/DialogTitleTextView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView android:gravity="start" android:id="@+id/dialog_map_name_tv" android:layout_width="@dimen/pt150" android:layout_marginTop="@dimen/size_52" android:text="@string/build_map_name" android:textDirection="locale" android:textAlignment="viewStart" android:layout_marginStart="@dimen/size_62" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_cl" style="@style/DialogContentTextView"/>
        <androidx.appcompat.widget.AppCompatEditText android:id="@+id/dialog_map_name_et" android:layout_width="@dimen/size_767" android:layout_height="wrap_content" android:hint="@string/build_map_name_hint" android:paddingStart="@dimen/size_24" app:layout_constraintBottom_toBottomOf="@+id/dialog_map_name_tv" app:layout_constraintStart_toEndOf="@+id/dialog_map_name_tv" app:layout_constraintTop_toTopOf="@+id/dialog_map_name_tv" style="@style/DialogContentEditText"/>
        <androidx.appcompat.widget.AppCompatTextView android:gravity="start" android:id="@+id/dialog_map_floor_tv" android:layout_width="@dimen/pt150" android:layout_marginTop="@dimen/size_60" android:text="@string/build_map_floor" android:textDirection="locale" android:textAlignment="viewStart" app:layout_constraintStart_toStartOf="@+id/dialog_map_name_tv" app:layout_constraintTop_toBottomOf="@+id/dialog_map_name_tv" style="@style/DialogContentTextView"/>
        <androidx.appcompat.widget.AppCompatEditText android:id="@+id/dialog_map_floor_et" android:background="@drawable/line_et_bg" android:layout_width="@dimen/size_767" android:hint="@string/build_map_floor_hint" android:digits="-1234567890" android:inputType="number" android:textDirection="locale" android:paddingStart="@dimen/size_24" app:layout_constraintBottom_toBottomOf="@+id/dialog_map_floor_tv" app:layout_constraintStart_toStartOf="@+id/dialog_map_name_et" app:layout_constraintTop_toTopOf="@+id/dialog_map_floor_tv" style="@style/DialogContentEditText"/>
        <RadioGroup android:orientation="horizontal" android:id="@+id/dialog_map_build_type_rg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_49" android:layout_marginStart="@dimen/size_33" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_map_floor_et">
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/dialog_map_build_type_normal_rb" android:checked="true" android:text="@string/build_map_standard_mode" style="@style/DialogContentRadioButton"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/dialog_map_build_type_like_rb" android:text="@string/build_map_similar_pattern" android:layout_marginStart="@dimen/size_80" style="@style/DialogContentRadioButton"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/dialog_map_build_type_big_rb" android:text="@string/build_map_large_scene_mode" android:layout_marginStart="@dimen/size_80" style="@style/DialogContentRadioButton"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/dialog_map_build_type_assist_rb" android:visibility="gone" android:text="@string/build_map_external_auxiliary_mode" android:layout_marginStart="@dimen/size_80" style="@style/DialogContentRadioButton"/>
        </RadioGroup>
        <include android:id="@+id/buttons" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_65" app:layout_constraintEnd_toEndOf="@+id/dialog_map_build_type_rg" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_map_build_type_rg" layout="@layout/dialog_bottom"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
