<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/layout_collect_mode_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_collect_mode" android:background="@drawable/shape_label_camera_bg" android:layout_width="@dimen/pt284" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pt40" android:layout_marginStart="@dimen/pt65" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <TextView android:textSize="@dimen/pt28" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pt24" android:text="@string/txt_line_collect_mode" android:layout_marginStart="@dimen/pt32"/>
        <RadioButton android:id="@+id/rb_simplified_chinese" android:layout_marginTop="@dimen/pt45" android:layout_marginBottom="@dimen/pt17" android:checked="true" android:text="@string/txt_match_degree_collect" android:layout_marginStart="@dimen/pt37" style="@style/set_rBtn"/>
    </LinearLayout>
    <mc.csst.com.selfchassis.ui.widget.StartCollectView android:id="@+id/start_collecting_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/pt60" app:end_drawing_text="@string/text_stop_collecting" app:layout_constraintStart_toEndOf="@+id/ll_collect_mode" app:layout_constraintTop_toTopOf="@+id/ll_collect_mode" app:start_drawing_text="@string/text_start_collecting"/>
</androidx.constraintlayout.widget.ConstraintLayout>
